reduce base font size to 18px - fixes alignment issues

--- a/css/bootstrap_less_config/variables.less
+++ b/css/bootstrap_less_config/variables.less
@@ -44,7 +44,7 @@
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
 
-@font-size-base:          20px;
+@font-size-base:          18px;
 @font-size-large:         ceil(@font-size-base * 1.25); // ~18px
 @font-size-small:         ceil(@font-size-base * 0.85); // ~12px
 
